cluster/apps/minecraft/crafty-controller/app/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow HTTPS/HTTP egress for Xbox Live authentication, Minecraft downloads, and addon fetching
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-crafty-web-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crafty-controller
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow Bedrock game traffic ingress from world (LoadBalancer)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-crafty-bedrock-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crafty-controller
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            # Port range for multiple Bedrock servers (19132-19139)
            - port: "19132"
              endPort: 19139
              protocol: UDP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow Traefik ingress for web UI
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-crafty-traefik-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crafty-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            k8s:app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
